# Hangman

./: CMakeLists.txt  Gra.cpp  Gra.h  Gracz.cpp  Gracz.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  Slowo.cpp  Slowo.h  Wisielec.cpp  Wisielec.h  WprowadzHasloDialog.cpp  WprowadzHasloDialog.h  WprowadzHasloDialog.ui  dialog.ui  ios.h  main.cpp  resources.qrc
